# tufty-3d

./: CMakeLists.txt  LICENSE  README.md  common.h  fixedpt.h  lighting.cpp  lighting.h  matrix.h  model.cpp  model.h  octahedron.cpp  rduck.cpp  renderasm.S  renderbuffer.cpp  renderbuffer.h  rendering.cpp  rendering.h  scene.cpp  scene.h  sceneobject.h  squirrel.cpp  teapot.cpp  teapot.h  transform.h  tufty-3d.cpp  vector.h  vgamain.cpp
scripts/: convert.py
